<?xml version="1.0"?>
<package format="2">
  <name>mono_explorer</name>
  <version>0.0.0</version>
  <description>The dso_node package</description>
  <maintainer email="Nikomborirak@todo.todo">Kawin Nikomborirak</maintainer>
  <license>GPLv3</license>
  <author >Kawin Nikomborirak</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>
</package>
